tests/NormalTests/paczka1/fuzzy1/94140013.err
Error in line 10: nxN1Hg A421 88,7
Error in line 12: RXX3AdOe28L S890 58,8
Error in line 13: nxN1Hg A754 46,5
Error in line 31: RXX3AdOe28L S89x 129,x
